# KMSOnBoarding

./: .env.example  .gitignore  AGENTS.md  docker-compose.dev.yml  docker-compose.yml  kms.code-workspace  ruff.toml  services.code-workspace.temp
services/assessment/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
services/assessment/alembic/: env.py
services/assessment/alembic/versions/: 0001_init_assessment.py
services/assessment/app/: main.py
services/assessment/app/core/: config.py  deps.py  redis.py  security.py
services/assessment/app/crud/: __init__.py  attempt.py  question.py  test.py
services/assessment/app/db/: models.py
services/assessment/app/schemas/: __init__.py  attempt.py  question.py  test.py
services/assessment/tests/: conftest.py  test_attempts.py  test_questions.py  test_tests.py
services/auth/: Dockerfile  pyproject.toml
services/auth/alembic/: env.py
services/auth/alembic/versions/: 7b914f7320f2_fix_invitations_created_by_nullable_and_.py  b0e634e92ba9_remove_roles_table_add_role_column_to_.py  e5e5c39e9830_initial_schema.py  f39b5659de8b_add_invitations_and_user_hierarchy.py
services/auth/app/: main.py
services/auth/app/core/: config.py  enums.py  permissions.py  redis.py  security.py
services/auth/app/db/: models.py  session.py
services/auth/app/schemas/: __init__.py
services/auth/tests/: conftest.py  test_auth.py  test_invitations.py  test_verify.py
services/content/: Dockerfile  alembic.ini  pyproject.toml
services/content/alembic/: env.py
services/content/alembic/versions/: 0001_init_content_tables.py  1a7372850762_add_pending_content_to_heuristics.py  849f836ca67a_add_module_assignments.py  880eca4e904c_add_content_to_lessons.py  b9304461aab6_make_r7_uri_optional.py
services/content/app/: main.py
services/content/app/core/: config.py  deps.py  permissions.py  security.py
services/content/tests/: conftest.py  test_assignments.py  test_heuristics.py  test_lessons.py  test_methodist_assignments.py  test_modules.py
(+76 files in other folders)
