[project]
name = "kms-assessment"
version = "0.1.0"
description = "Assessment service for KMS"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.14.0",
    "python-jose[cryptography]>=3.4.0",
    "redis>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
