[project]
name = "kms-auth"
version = "0.1.0"
description = "Authentication and authorization service for KMS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "alembic>=1.15.0",
    "pydantic[email]>=2.11.0",
    "pydantic-settings>=2.0.0",
    "asyncpg>=0.30.0",
    "python-jose[cryptography]>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1.0",
    "redis>=5.2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "httpx>=0.28.0",
    "ruff>=0.15.13",
]
