[project]
name = "content"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.14.1",
    "python-jose>=3.5.0",
    "redis>=7.4.0",
    "requests>=2.34.2",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]
